# LiquidAudioBook

./: .gitignore  ARCHITECTURE_LFM2.md  DOWNLOAD_LFM2_MODELS.md  FRONTEND_APIS.md  INTEGRATION_FIX_GUIDE.md  INTEGRATION_SUMMARY.md  PROJECT_STATUS.md  PR_BODY.md  README.md  audiobook_app_prd.md  claude.md
app/: LiquidAudioBook.tsx  TEST_SUMMARY.md  design_guidelines.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
app/client/: index.html
app/client/src/: index.css
app/client/src/components/: AudioPlayer.test.tsx  AudioPlayer.tsx  ImageUploadZone.test.tsx  ImageUploadZone.tsx  LiquidBackground.tsx  ProcessingStages.test.tsx  ProcessingStages.tsx
app/client/src/components/examples/: AudioPlayer.tsx  ImageUploadZone.tsx  LiquidBackground.tsx  ProcessingStages.tsx
app/client/src/pages/: home.test.tsx  home.tsx
app/server/: INTEGRATION.md  index.ts  routes.test.ts  routes.ts  storage.ts
app/server/services/: flask-client.ts  mock-flask-server.ts
app/shared/: schema.ts
app/test/: setup.ts
backend/: .env.example  .gitignore  API_QUICK_REFERENCE.md  AUDIOBOOK_CREATION_GUIDE.md  FLASK_API_GUIDE.md  README.md  app.py  pyproject.toml  requirements.txt  test_flask_api.py
backend/services/: __init__.py  image_processor.py  ollama_service.py  tts_service.py
backend/src/audiobook_generator/: __init__.py  api.py  main.py  page_file_handler.py  page_processor.py  text_to_speech.py
