[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Audiobook generator that processes book page images using Large Foundation Models to extract text and generate speech for audiobook creation"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.0",
    "watchdog>=4.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "loguru>=0.7.3",
    "pydub>=0.25.1",
    "liquid-audio>=1.0.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "flask>=3.0.0",
    "soundfile>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["audiobook_generator"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
